Workaround for GCC's current bug with precompiled headers and anonymous namespaces.

http://gcc.gnu.org/bugzilla/show_bug.cgi?id=10591

The file boost/multi_array.hpp is the only include which triggers this bug, so
remove it from the GCH and include it where needed.


M Fractal/External.h

  No longer include boost/multi_array.hpp.

  Add standard include protection.

M Fractal/Accumulator.h

  Now include boost/multi_array.hpp.



git-svn-id: file:///home/pauldoo/Programs/svnrepo@69 8e395407-42ff-0310-94d9-ec183df6106f